# nkpy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: documentation.yml
docs/: conf.py  examples.rst  excel.rst  index.rst  nkpy.rst  requirements.txt
src/nkpy/: __init__.py  eegs.py  excel.py  videos.py
tests/: test_eegs.py  test_excel.py  test_nkpy.py  test_videos.py
