[project]
    dependencies = [
        "xlrd>=2.0.1",
    ]
    description = "Library to help reading and handling Nihon-Kohden data."
    name = "nkpy"
    readme = "README.md"
    requires-python = ">=3.11"
    version = "2025.03.1"

[build-system]
    build-backend = "hatchling.build"
    requires      = [ "hatchling" ]

[dependency-groups]
    dev = [
        "more-itertools>=10.6.0",
        "pytest>=8.3.5",
        "rich>=13.9.4",
    ]

[tool.pytest.ini_options]
    log_cli       = true
    log_cli_level = "DEBUG"
