[project]
    dependencies = [
        "xlrd>=2.0.1",
    ]
    description = "Library to help reading and handling Nihon-Kohden data."
    name = "nkpy"
    readme = "README.md"
    requires-python = ">=3.11"
    version = "2025.03.1"

[build-system]
    build-backend = "hatchling.build"
    requires      = [ "hatchling" ]

[dependency-groups]
    dev = [
        "more-itertools>=10.6.0",
        "pytest>=8.3.5",
        "rich>=13.9.4",
    ]
    docs = [
        "pydata-sphinx-theme>=0.16.1",
        "sphinx>=8.2.3",
        "sphinx-copybutton>=0.5.2",
]

[tool.pytest.ini_options]
    log_cli       = true
    log_cli_level = "DEBUG"
