[project]
    dependencies = [
        "xlrd>=2.0.1",
    ]
    description = "Library to help reading and handling Nihon-Kohden data."
    name = "nkpy"
    readme = "README.md"
    requires-python = ">=3.11"
    version = "2026.01.1"

[build-system]
    build-backend = "hatchling.build"
    requires      = [ "hatchling" ]

[dependency-groups]
    dev = [
        "more-itertools>=10.6.0",
        "pytest>=8.3.5",
        "rich>=13.9.4",
    ]
    docs = [
        "pydata-sphinx-theme>=0.16.1",
        "sphinx-copybutton>=0.5.2",
        "sphinx>=8.2.3",
    ]

[tool.ruff.lint]
    ignore = [ "DTZ001", "ERA001", "G004", "PLR2004", "S101", "S603" ]

[tool.pytest.ini_options]
    log_cli       = false
    log_cli_level = "DEBUG"
